[gd_scene load_steps=4 format=2]

[ext_resource path="res://tankmoinhat2.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27, 22 )

[node name="Player" type="KinematicBody2D" groups=["Net", "Player", "nguoichoi"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.19209e-07, -2.38419e-07 )
rotation = -1.57053
scale = Vector2( 0.375, 0.4375 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Network_tick_rate" type="Timer" parent="."]
wait_time = 0.03
autostart = true

[node name="Reload_timer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Hit_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Shoot_point" type="Position2D" parent="."]
position = Vector2( 32, 0 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[connection signal="timeout" from="Network_tick_rate" to="." method="_on_Network_tick_rate_timeout"]
[connection signal="timeout" from="Reload_timer" to="." method="_on_Reload_timer_timeout"]
[connection signal="timeout" from="Hit_timer" to="." method="_on_Hit_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
